[gd_scene load_steps=22 format=3 uid="uid://8b3t3evuuvim"]

[ext_resource type="Texture2D" uid="uid://xgoldi6ay684" path="res://Assets/enemy/damage.png" id="1_0b8xr"]
[ext_resource type="Script" uid="uid://dm2r3tbml71v" path="res://inimigo.gd" id="1_g45jm"]
[ext_resource type="PackedScene" path="res://projetil_inimigo.tscn" id="2_enrbn"]
[ext_resource type="Texture2D" uid="uid://p81dwrcyjign" path="res://Assets/enemy/common.png" id="2_g45jm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_enrbn"]
atlas = ExtResource("1_0b8xr")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0fh3"]
atlas = ExtResource("1_0b8xr")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o83ti"]
atlas = ExtResource("2_g45jm")
region = Rect2(0, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cs1f"]
atlas = ExtResource("2_g45jm")
region = Rect2(32, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekwcj"]
atlas = ExtResource("2_g45jm")
region = Rect2(64, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eewpo"]
atlas = ExtResource("2_g45jm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3af6e"]
atlas = ExtResource("2_g45jm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nglqo"]
atlas = ExtResource("2_g45jm")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2mw5"]
atlas = ExtResource("2_g45jm")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kus2f"]
atlas = ExtResource("2_g45jm")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftkuo"]
atlas = ExtResource("2_g45jm")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hydjg"]
atlas = ExtResource("2_g45jm")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g12hr"]
atlas = ExtResource("2_g45jm")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkxog"]
atlas = ExtResource("2_g45jm")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wmjm"]
atlas = ExtResource("2_g45jm")
region = Rect2(96, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_fko2f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_enrbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0fh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_enrbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0fh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_enrbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0fh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o83ti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cs1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekwcj")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eewpo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3af6e")
}],
"loop": true,
"name": &"standing",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nglqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2mw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kus2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftkuo")
}],
"loop": true,
"name": &"walking_front",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hydjg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g12hr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkxog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wmjm")
}],
"loop": true,
"name": &"walking_side",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gtama"]
size = Vector2(26, 30)

[node name="Inimigo" type="Area2D"]
collision_layer = 3
script = ExtResource("1_g45jm")
cena_projetil = ExtResource("2_enrbn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(2.125, 2.125)
sprite_frames = SubResource("SpriteFrames_fko2f")
animation = &"death"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gtama")

[node name="BocaDoCano" type="Marker2D" parent="."]
position = Vector2(-10, 4)

[node name="TimerLateral" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="TimerTiro" type="Timer" parent="."]
wait_time = 1.5
